# compiler-construction-project

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: Project_D_FULL.md
src/: ast.cpp  ast.hpp  ast_visitor.hpp  dinterp.cpp  dlexer.cpp  dparser.cpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  lexer.l  parser.y  print_visitor.cpp  print_visitor.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  token_dump.cpp  token_dump.hpp
test/: generate_gold_lexer.sh  generate_gold_parser.sh  interp_suite_test.cpp  lexer_suite_test.cpp  parser_suite_test.cpp  sema_test.cpp  test10.d  test102.d  test104.d  test105.d  test107.d  test11.d  test115.d  test116.gold  test117.d  test124.d  test126.gold  test128.d  test13.d  test130.d  test131.d  test133.d  test138.d  test139.d  test141.d  test142.d  test146.d  test148.d  test148.gold  test20.d  test22.d  test24.d  test26.d  test27.d  test29.d  test30.d  test32.d  test33.d  test37.d  test4.d  (+25 more)
test/suite/: test1.d  test1.lgold  test1.pgold  test10.gold  test10.lgold  test10.pgold  test100.d  test100.lgold  test100.pgold  test101.d  test101.lgold  test101.pgold  test102.lgold  test102.pgold  test103.d  test103.lgold  test103.pgold  test104.lgold  test104.pgold  test105.lgold  test105.pgold  test106.d  test106.lgold  test106.pgold  test107.lgold  test107.pgold  test108.d  test108.gold  test108.lgold  test108.pgold  test109.dl  test109.lgold  test109.pgold  test11.lgold  test11.pgold  test110.dl  test110.lgold  test110.pgold  test111.d  test111.lgold  (+381 more)
vscode-d-language/: d-language-0.1.0.vsix  language-configuration.json  package.json
vscode-d-language/syntaxes/: d-language.tmLanguage.json
